--- a/Dicing/Base.lproj/LaunchScreen.storyboard
+++ b/Dicing/Base.lproj/LaunchScreen.storyboard
@@ -27,22 +27,24 @@
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="newbackground" translatesAutoresizingMaskIntoConstraints="NO" id="thn-cf-XRO">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                             </imageView>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="diceeLogo" translatesAutoresizingMaskIntoConstraints="NO" id="4zi-3i-iJr">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="diceeLogo" translatesAutoresizingMaskIntoConstraints="NO" id="4zi-3i-iJr">
                                 <rect key="frame" x="87" y="20" width="200" height="200"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="200" id="3jd-Fg-0aW"/>
+                                    <constraint firstAttribute="width" constant="200" id="buc-af-Vud"/>
+                                </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Copyright © Warcom" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="odx-o6-87w">
                                 <rect key="frame" x="100" y="626" width="175" height="25"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="175" id="HbB-Kv-Ugy"/>
-                                </constraints>
                                 <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="18"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Roll the Dice" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QOL-m3-AUC">
-                                <rect key="frame" x="79" y="234" width="227" height="51"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Roll the Dice" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QOL-m3-AUC">
+                                <rect key="frame" x="74" y="234" width="227" height="51"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="51" id="8pd-q3-BNP"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" name="AvenirNext-Bold" family="Avenir Next" pointSize="37"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
@@ -50,11 +52,15 @@
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
+                            <constraint firstItem="4zi-3i-iJr" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="ASO-cu-mSl"/>
                             <constraint firstItem="odx-o6-87w" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="FCl-SH-D7O"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="odx-o6-87w" secondAttribute="bottom" constant="16" id="NV6-yK-bna"/>
                             <constraint firstItem="thn-cf-XRO" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="d28-Fo-0LE"/>
                             <constraint firstItem="thn-cf-XRO" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="dRj-ZU-f8s"/>
+                            <constraint firstItem="QOL-m3-AUC" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="hcg-oH-pWy"/>
+                            <constraint firstItem="QOL-m3-AUC" firstAttribute="top" secondItem="4zi-3i-iJr" secondAttribute="bottom" constant="14" id="wEL-Iy-8NE"/>
                             <constraint firstItem="thn-cf-XRO" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="wLv-4g-TOA"/>
+                            <constraint firstItem="4zi-3i-iJr" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="yPY-Hx-As6"/>
                             <constraint firstItem="thn-cf-XRO" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="zMW-mg-1mK"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
