--- a/Dicing/Base.lproj/Main.storyboard
+++ b/Dicing/Base.lproj/Main.storyboard
@@ -25,58 +25,74 @@
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="newbackground" translatesAutoresizingMaskIntoConstraints="NO" id="N6F-aI-iUg">
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="414" id="1Vh-6B-T3U"/>
-                                </constraints>
                             </imageView>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="diceeLogo" translatesAutoresizingMaskIntoConstraints="NO" id="bwG-Hg-vPh">
-                                <rect key="frame" x="107" y="20" width="200" height="171"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="171" id="FR3-9P-5mq"/>
-                                    <constraint firstAttribute="width" constant="200" id="w0X-KM-KRp"/>
-                                </constraints>
-                            </imageView>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="dice1" translatesAutoresizingMaskIntoConstraints="NO" id="xzi-Vp-Vpr">
-                                <rect key="frame" x="67" y="271" width="120" height="120"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="120" id="YPO-ni-Q29"/>
-                                    <constraint firstAttribute="height" constant="120" id="mn0-ih-duj"/>
-                                </constraints>
-                            </imageView>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="dice1" translatesAutoresizingMaskIntoConstraints="NO" id="8Ny-dK-stv">
-                                <rect key="frame" x="236" y="271" width="120" height="120"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="120" id="5Zh-99-3N6"/>
-                                    <constraint firstAttribute="width" constant="120" id="Goa-ZL-Xg9"/>
-                                </constraints>
-                            </imageView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7Hf-hy-CY7">
-                                <rect key="frame" x="138" y="452" width="139" height="83"/>
-                                <color key="backgroundColor" red="0.0" green="0.56284224989999998" blue="0.31881666180000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="50"/>
-                                <state key="normal" title="Roll">
-                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                </state>
-                                <connections>
-                                    <action selector="rollPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="qK8-P5-IWj"/>
-                                </connections>
-                            </button>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" alignment="center" spacing="122" translatesAutoresizingMaskIntoConstraints="NO" id="srK-yJ-eUP">
+                                <rect key="frame" x="40" y="60" width="334" height="636"/>
+                                <subviews>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="fcC-7v-UAn">
+                                        <rect key="frame" x="17" y="0.0" width="300" height="200"/>
+                                        <subviews>
+                                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="diceeLogo" translatesAutoresizingMaskIntoConstraints="NO" id="bwG-Hg-vPh">
+                                                <rect key="frame" x="0.0" y="0.0" width="300" height="200"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" constant="300" id="2Hg-14-zWF"/>
+                                                    <constraint firstAttribute="height" constant="200" id="fKz-3v-5Jp"/>
+                                                </constraints>
+                                            </imageView>
+                                        </subviews>
+                                    </stackView>
+                                    <stackView opaque="NO" contentMode="scaleToFill" spacing="40" translatesAutoresizingMaskIntoConstraints="NO" id="YnU-Bi-grU">
+                                        <rect key="frame" x="27" y="322" width="280" height="120"/>
+                                        <subviews>
+                                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="dice1" translatesAutoresizingMaskIntoConstraints="NO" id="xzi-Vp-Vpr">
+                                                <rect key="frame" x="0.0" y="0.0" width="120" height="120"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="120" id="iqi-sr-e2w"/>
+                                                    <constraint firstAttribute="width" constant="120" id="jn6-wk-FzS"/>
+                                                </constraints>
+                                            </imageView>
+                                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="dice1" translatesAutoresizingMaskIntoConstraints="NO" id="8Ny-dK-stv">
+                                                <rect key="frame" x="160" y="0.0" width="120" height="120"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="120" id="0cH-63-aQA"/>
+                                                    <constraint firstAttribute="width" constant="120" id="6EN-EB-zSC"/>
+                                                </constraints>
+                                            </imageView>
+                                        </subviews>
+                                    </stackView>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="kgL-wu-TTE">
+                                        <rect key="frame" x="112" y="564" width="110" height="72"/>
+                                        <subviews>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7Hf-hy-CY7">
+                                                <rect key="frame" x="0.0" y="0.0" width="110" height="72"/>
+                                                <color key="backgroundColor" red="0.0" green="0.56284224989999998" blue="0.31881666180000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="72" id="OrJ-QI-WgB"/>
+                                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="110" id="b8d-k8-Cn6"/>
+                                                </constraints>
+                                                <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="50"/>
+                                                <state key="normal" title="Roll">
+                                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                </state>
+                                                <connections>
+                                                    <action selector="rollPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="qK8-P5-IWj"/>
+                                                </connections>
+                                            </button>
+                                        </subviews>
+                                    </stackView>
+                                </subviews>
+                            </stackView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="N6F-aI-iUg" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="6VP-MJ-n2U"/>
-                            <constraint firstItem="xzi-Vp-Vpr" firstAttribute="top" secondItem="bwG-Hg-vPh" secondAttribute="bottom" constant="80" id="CFJ-Ti-JuI"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="7Hf-hy-CY7" secondAttribute="bottom" constant="201" id="DFJ-eS-zpt"/>
-                            <constraint firstItem="8Ny-dK-stv" firstAttribute="top" secondItem="bwG-Hg-vPh" secondAttribute="bottom" constant="80" id="E8I-65-9Gb"/>
-                            <constraint firstItem="bwG-Hg-vPh" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="KqX-ca-62U"/>
-                            <constraint firstItem="N6F-aI-iUg" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="NIP-hl-EEW"/>
-                            <constraint firstItem="7Hf-hy-CY7" firstAttribute="centerX" secondItem="bwG-Hg-vPh" secondAttribute="centerX" id="St5-2D-LHR"/>
-                            <constraint firstItem="bwG-Hg-vPh" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Zur-8Q-yDd"/>
-                            <constraint firstItem="xzi-Vp-Vpr" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="67" id="bWC-Mv-dOo"/>
-                            <constraint firstItem="N6F-aI-iUg" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="i6T-2u-MPv"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="8Ny-dK-stv" secondAttribute="trailing" constant="58" id="pS2-wa-bhr"/>
-                            <constraint firstItem="7Hf-hy-CY7" firstAttribute="top" secondItem="xzi-Vp-Vpr" secondAttribute="bottom" constant="61" id="wPB-4R-qAY"/>
-                            <constraint firstItem="7Hf-hy-CY7" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="138" id="wiF-Jh-abd"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="srK-yJ-eUP" secondAttribute="bottom" constant="40" id="9yK-O0-v1U"/>
+                            <constraint firstItem="srK-yJ-eUP" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="40" id="CSO-zk-nyd"/>
+                            <constraint firstItem="N6F-aI-iUg" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="I9K-JK-d5X"/>
+                            <constraint firstAttribute="trailing" secondItem="N6F-aI-iUg" secondAttribute="trailing" id="Q7k-Gg-Btd"/>
+                            <constraint firstItem="N6F-aI-iUg" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="YlW-E2-sZb"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="srK-yJ-eUP" secondAttribute="trailing" constant="40" id="s2C-bV-5v6"/>
+                            <constraint firstItem="N6F-aI-iUg" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="vit-bn-Iq7"/>
+                            <constraint firstItem="srK-yJ-eUP" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="40" id="zdu-ih-W1b"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
